Fixed scrollbar displaying in Sidebar button on mobile

--- a/components/Sidebar/Sidebar.styl
+++ b/components/Sidebar/Sidebar.styl
@@ -74,7 +74,9 @@ $sidebar_width_closed = 9rem
 		top 0
 		right 0
 		height 100%
-		overflow-y auto
+
+		&.can_scroll
+			overflow-y auto
 
 		&
 		.is_open &
